--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@prisma/client": "^4.0.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "concurrently": "^7.2.2",
     "cookie-parser": "^1.4.6",
     "daisyui": "^2.17.0",
