--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv-cli": "^5.1.0",
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "googleapis": "^105.0.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.7",
