--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "formidable": "^2.0.1",
     "googleapis": "^105.0.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.7",
