--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "formidable": "^2.0.1",
-    "googleapis": "^105.0.0",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.18",
