--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nodemon": "^2.0.18",
     "password-checker": "^0.2.4",
     "prisma": "^4.0.0",
+    "puppeteer": "^16.1.1",
     "sirv-cli": "^2.0.0",
     "svelte-routing": "^1.6.0",
     "uuid": "^8.3.2",
