--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sirv-cli": "^2.0.0",
     "svelte-routing": "^1.6.0",
     "uuid": "^8.3.2",
-    "winston": "^3.8.0"
+    "winston": "^3.8.0",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
